# metatok

./: .gitignore  combine_mp3_with_mp4.py  combine_videos.sh  dataset.py  main.py  pyproject.toml  requirements.txt  summaries_of_summary.txt  summary.py  transcription.py  tts.py  video_creation.py
data/: summaries_of_summary.txt  summaries_of_summary_openai.txt  summaries_of_summary_openai2024-01-06.txt  summary.csv  transcription.csv  transcripts.csv
tiktok-popnews/: rxconfig.py
tiktok-popnews/data/: summaries_of_summary.txt
tiktok-popnews/tiktok_popnews/: backend.py  styles.py  summary.py  tiktok_popnews.py  transcription.py  tts.py
