[tool.poetry]
name = "metatok"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
youtube-transcript-api = "*"
pandas = "*"
google-cloud-aiplatform = "^1.35.0"
python-dotenv = "^1.0.0"
openai = "^1.6.1"
tqdm = ">4.9.0"
fire = "^0.5.0"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
